hphp/hack/test/typecheck/reactive/test_freeze2.php.exp
File "test_freeze2.php", line 10, characters 3-4:
This variable is frozen in one scope but not the other (Typing[4209])
